--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -28,9 +28,10 @@ jobs:
         distribution: 'temurin'
         cache: 'sbt'
     - name: Run tests
-      run: |
-        cd data-quality-profiler
-        sbt test
+      working-directory: ./data-quality-profiler
+      run: sbt test
       # Optional: This step uploads information to the GitHub dependency graph and unblocking Dependabot alerts for the repository
     - name: Upload dependency graph
       uses: scalacenter/sbt-dependency-submission@ab086b50c947c9774b70f39fc7f6e20ca2706c91
+      with:
+        working-directory: ./data-quality-profiler
